# bn-lang

./: Cargo.toml  README.md
src/: ast.rs  error.rs  lexer.rs  main.rs  parser.rs  utils.rs
src/passes/: item_name_binding.rs  mod.rs  name_binding.rs
src/targets/: mod.rs
src/targets/target_js/: builder.rs  mod.rs  runtime.js
